--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ main {
 }
 
 .panel {
-    height: 70%;
+    height: 95%;
     width: 100%;
     display: flex;
     border-bottom: 1px solid #333;
@@ -105,7 +105,7 @@ iframe{
 }
 
 .console {
-    height: 30%;
+    height: 5%;
     width: 100%;
     background-color: #121212;
     border-top: 1px solid #333;
@@ -116,6 +116,7 @@ iframe{
 }
 
 #console {
+    display : none ;
     height: 90%;
     overflow-y: auto;
     white-space: pre-wrap;
